Use pixel based background size. This fixes browsers zooming issues with alignment of the icons.

--- a/src/GeocodeControl.scss
+++ b/src/GeocodeControl.scss
@@ -15,7 +15,7 @@
 	background-image: url(location-view-icons.png);
 	background-position: -26px 0px;
 	background-repeat: no-repeat;
-	background-size: 400% 200%;
+	background-size: 104px 52px;
 }
 
 .geocode-control-input {
