--- a/src/PointControl.scss
+++ b/src/PointControl.scss
@@ -15,7 +15,7 @@ a.leaflet-point-control {
 	box-shadow:0 1px 1px rgb(0,0,0);
 	background-repeat: no-repeat;
 	background-image: url(location-view-icons.png);
-	background-size: 400% 200%;
+	background-size: 104px 52px;
 	background-position: -78px 0px;
 }
 
